zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__swap_layouts_not_including_plugin_panes_present_in_existing_layout.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C): I am a                                                                                                                   
01 (C): status bar                                                                                                               
02 (C): ┌ command1 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
03 (C): │                                                                                                                       │
04 (C): │                                              Waiting to run: command1                                                 │
05 (C): │                                                                                                                       │
06 (C): │                                   <ENTER> run, <ESC> drop to shell, <Ctrl-c> exit                                     │
07 (C): └─ <ENTER> run, <ESC> drop to shell, <Ctrl-c> exit ─────────────────────────────────────────────────────────────────────┘
08 (C): ┌ Pane #2 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
09 (C): │                                                                                                                       │
10 (C): │                                                                                                                       │
11 (C): │                                                                                                                       │
12 (C): │                                                                                                                       │
13 (C): └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
14 (C): ┌ command2 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
15 (C): │                                              Waiting to run: command2                                                 │
16 (C): │                                                                                                                       │
17 (C): │                                   <ENTER> run, <ESC> drop to shell, <Ctrl-c> exit                                     │
18 (C): └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
19 (C): I am a tab bar
