zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__titles_frame_style_with_fixed_size_pane.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C):                                                            foo                                                           
01 (C): I am the fixed size pane                                                                                                 
02 (C):                                                                                                                          
03 (C):                                                                                                                          
04 (C):                                                                                                                          
05 (C):                                                                                                                          
06 (C): ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
07 (C):                                                          Pane #2                                                         
08 (C): I am the flexible pane                                                                                                   
09 (C):                                                                                                                          
10 (C):                                                                                                                          
11 (C):                                                                                                                          
12 (C):                                                                                                                          
13 (C):                                                                                                                          
14 (C):                                                                                                                          
15 (C):                                                                                                                          
16 (C):                                                                                                                          
17 (C):                                                                                                                          
18 (C):                                                                                                                          
19 (C):
